feat: explain formatting changes by location
